# Texas-Holder

./: .gitignore  .pre-commit-config.yaml  ENUMERATION_AUTO_FEATURES.md  EV_CALCULATOR_FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MONTE_CARLO_CI_FEATURES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  RANGE_PARSER_FEATURES.md  README.md  README_UPDATED.md  USAGE.md  WEB_DEPLOYMENT.md  benchmark_results.json  debug_web.py  demo_enhanced_performance.py  demo_enumeration_auto.py  demo_ev_analysis.py  demo_monte_carlo_ci.py  demo_ranges.py  pyproject.toml  quick_demo.py  quick_demo_improvements.py  range_parser.py  requirements-enhanced.txt  requirements-prod.txt  requirements.txt  start_web.py  test_benchmark_scenarios.py  test_benchmarks.py  test_calculator.py  test_comprehensive.py  test_core_functionality.py  test_enhanced_features.py  test_enumeration_auto.py  test_ev_calculator.py  test_monte_carlo_ci.py  test_property_based.py  test_range_parser.py  (+6 more)
.github/workflows/: ci.yml
api/: index.py
src/: __init__.py
src/api/: calculator_service.py
src/core/: __init__.py  dispatcher.py  enhanced_calculator.py  enumeration.py  equity_result.py  exact_enumeration.py  monte_carlo.py  numba_evaluator.py  rng.py  vectorized_monte_carlo.py
src/product/: __init__.py  cli.py  cli_ev.py  cli_ranges.py
src/strategy/: __init__.py  ev_calculator.py  ranges.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_accuracy_regression.py  test_performance_benchmarks.py
